test/asm/undefined-dot.out
ERROR: undefined-dot.asm(3):
	'.' not defined
../../rgbasm: Assembly aborted in pass 2 (1 errors)!
